--- a/css/layout.css
+++ b/css/layout.css
@@ -504,3 +504,51 @@ footer {
     transform: scale(1.2); /* Subtle zoom effect */
     text-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
 }
+
+
+/* CSS for Active Navigation Link */
+.navbar .nav-link.active {
+  color: rgb(255, 140, 0); /* Example: Orange text for active state */
+  background-color: rgba(0, 0, 0, 0.1); /* Slight background to enhance visibility */
+  padding: 10px 15px;
+  border-radius: 5px;
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+}
+
+@media (max-width: 1024px) {
+  .navbar {
+      flex-direction: column;
+      align-items: center;
+  }
+  .text h1 {
+      font-size: 2.5rem;
+  }
+  .burger img {
+      width: 80px;
+      height: 80px;
+  }
+}
+
+@media (max-width: 768px) {
+  .text {
+      top: 5rem;
+      left: 5%;
+      width: 90%;
+  }
+  .navbar img {
+      width: 40px; /* Smaller logo on smaller screens */
+  }
+  .burger-toggle img {
+      width: 60%; /* Adjust image size for better visibility on smaller screens */
+  }
+}
+
+@media (max-width: 480px) {
+  .navbar .center-nav {
+      flex-direction: column;
+  }
+  .burger img {
+      width: 60px;
+      height: 60px;
+  }
+}
