--- a/css/base.css
+++ b/css/base.css
@@ -9,3 +9,24 @@ body {
   background-color: black;
   background-attachment: fixed;
 }
+
+.navbar ul {
+  list-style: none;
+  display: flex;
+  padding: 0;
+}
+
+.navbar ul li {
+  margin-right: 20px;
+}
+
+.navbar ul li a {
+  text-decoration: none;
+  color: white;
+  transition: color 0.3s ease;
+}
+
+.navbar ul li a:hover {
+  color: rgb(255, 140, 0);
+}
+
