--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,33 +1,22 @@
-/* Media Queries */
 @media (max-width: 768px) {
-    .navbar {
-      flex-direction: column;
-      align-items: flex-start;
-      padding: 10px;
-    }
-  
-    #nav-list {
-      flex-direction: column;
-      gap: 10px;
-    }
-  
-    .text h1 {
-      font-size: 2.5rem;
-    }
-  
-    .text p {
-      width: 80%;
-    }
-  
-    .burger img {
-      width: 80px;
-      height: 80px;
-    }
-  
-    .burger-toggle img {
-      width: 60%;
-      top: 5rem;
-      right: 20px;
-    }
+  .navbar ul {
+    flex-direction: column;
+    gap: 10px;
   }
-  
+  .navbar ul li {
+    margin: 0;
+  }
+  .text {
+    text-align: center;
+    font-size: 1.5rem;
+  }
+  .burger-toggle img {
+    visibility: hidden;
+  }
+  .burger img {
+    visibility: hidden;
+  }
+  .text p  {
+    margin: 0 auto;
+  }
+}
